fix: 遊び方の画像は位置を調整、ランダムボタンのシャドウを自然な色に

--- a/index.html
+++ b/index.html
@@ -813,6 +813,8 @@
             border-radius: 12px;
             overflow: hidden;
             border: 1px solid #eee;
+            display: flex;
+            justify-content: center;
         }
         .howto-image {
             width: 100%;
@@ -841,7 +843,7 @@
         white-space: nowrap;
 
         box-shadow:
-            0 4px 10px rgba(255, 94, 98, 0.35),
+            0 4px 10px rgba(97, 94, 255, 0.203),
             inset 0 -3px 0 rgba(0,0,0,0.15); /* 押せる感 */
 
         transition: transform 0.08s ease, filter 0.15s ease, box-shadow 0.15s ease;
